# devsapi

./: .gitignore  .pre-commit-config.yaml  README.md  app.js  app.py  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  sonar-project.properties
.github/workflows/: ci-cd.yml
.serverless/: cloudformation-template-update-stack.json  meta.json  serverless-state.json
app/: settings.py  urls.py
app/students/: models.py  serializer.py  urls.py  views.py
app/students/migrations/: 0001_initial.py
controllers/: jobController.js
src/middleware/: errorHandler.js
src/modules/python/: python-org.js
src/routes/: jobs.js
