[tool.poetry]
name = "devsapi"
version = "1.0.0"
description = "The devs API!"
authors = ["Heck"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
selenium = "^4.25.0"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
