[tool.poetry]
name = "devsapi"
version = "1.0.0"
description = "The devs API!"
authors = ["Heck"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = "^0.115.0"}
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
